// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <DiaryEntry /> should renders correctly and testing another methods 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="diaryEntriesMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={true}
            name="diaryEntriesMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Diary Entry List"
          />
          <PluginMainPanel
            columnNameSortBy="noteType"
            emptyDataMessage="No Diary Entry List"
            headers={
              Array [
                Object {
                  "key": "noteType",
                  "title": "Type",
                  "width": "23%",
                },
                Object {
                  "key": "author",
                  "title": "Author",
                  "width": "33%",
                },
                Object {
                  "key": "dateCreated",
                  "title": "Date Created",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="diaryEntries"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <DiaryEntry /> should renders correctly and testing context and lifecycle componentWillReceiveProps 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="diaryEntriesMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={true}
            name="diaryEntriesMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Diary Entry List"
          />
          <PluginMainPanel
            columnNameSortBy="noteType"
            emptyDataMessage="No Diary Entry List"
            headers={
              Array [
                Object {
                  "key": "noteType",
                  "title": "Type",
                  "width": "23%",
                },
                Object {
                  "key": "author",
                  "title": "Author",
                  "width": "33%",
                },
                Object {
                  "key": "dateCreated",
                  "title": "Date Created",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            id="d6b4d397-779c-4a4e-b5eb-2084fb11876f"
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="diaryEntries"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <DiaryEntryDetail
          currentPanel="diaryEntriesDetail"
          detail={
            Object {
              "author": "bob.smith@gmail.com",
              "dateCreated": 1510224834000,
              "noteType": "Exam Report",
              "notes": "11",
              "source": "ethercis",
              "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          name="diaryEntriesDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          openedPanel="diaryEntriesCreate"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <DiaryEntry /> should renders correctly with diaryEntriesDetail and testing Create Panel 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="diaryEntriesMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={true}
            name="diaryEntriesMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Diary Entry List"
          />
          <PluginMainPanel
            columnNameSortBy="noteType"
            emptyDataMessage="No Diary Entry List"
            headers={
              Array [
                Object {
                  "key": "noteType",
                  "title": "Type",
                  "width": "23%",
                },
                Object {
                  "key": "author",
                  "title": "Author",
                  "width": "33%",
                },
                Object {
                  "key": "dateCreated",
                  "title": "Date Created",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="diaryEntries"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <PluginCreate
          componentForm={
            <Connect(ReduxForm)
              isSubmit={false}
            />
          }
          currentPanel="diaryEntriesCreate"
          expandedPanel="all"
          isCreatePanelVisible={true}
          isImport={false}
          name="diaryEntriesCreate"
          onCancel={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          openedPanel="diaryEntriesCreate"
          title="Create Diary Entry"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <DiaryEntry /> should renders correctly with diaryEntriesDetail and testing Create Panel 2`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="diaryEntriesMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={true}
            name="diaryEntriesMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Diary Entry List"
          />
          <PluginMainPanel
            columnNameSortBy="noteType"
            emptyDataMessage="No Diary Entry List"
            headers={
              Array [
                Object {
                  "key": "noteType",
                  "title": "Type",
                  "width": "23%",
                },
                Object {
                  "key": "author",
                  "title": "Author",
                  "width": "33%",
                },
                Object {
                  "key": "dateCreated",
                  "title": "Date Created",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={false}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="diaryEntries"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <PluginCreate
          componentForm={
            <Connect(ReduxForm)
              isSubmit={false}
            />
          }
          currentPanel="diaryEntriesCreate"
          expandedPanel="all"
          isCreatePanelVisible={true}
          isImport={false}
          name="diaryEntriesCreate"
          onCancel={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          openedPanel="diaryEntriesCreate"
          title="Create Diary Entry"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <DiaryEntry /> should renders correctly with diaryEntriesPanel and testing Detail Panel 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-main"
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="diaryEntriesMain"
            isBtnExpandVisible={true}
            isBtnTableVisible={true}
            name="diaryEntriesMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Diary Entry List"
          />
          <PluginMainPanel
            columnNameSortBy="noteType"
            emptyDataMessage="No Diary Entry List"
            headers={
              Array [
                Object {
                  "key": "noteType",
                  "title": "Type",
                  "width": "23%",
                },
                Object {
                  "key": "author",
                  "title": "Author",
                  "width": "33%",
                },
                Object {
                  "key": "dateCreated",
                  "title": "Date Created",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            id="d6b4d397-779c-4a4e-b5eb-2084fb11876f"
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="diaryEntries"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <DiaryEntryDetail
          currentPanel="diaryEntriesDetail"
          detail={
            Object {
              "author": "bob.smith@gmail.com",
              "dateCreated": 1510224834000,
              "noteType": "Exam Report",
              "notes": "11",
              "source": "ethercis",
              "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
            }
          }
          editedPanel={Object {}}
          expandedPanel="all"
          isSubmit={false}
          name="diaryEntriesDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          openedPanel="diaryEntriesPanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <DiaryEntry /> should renders correctly with diaryEntriesPanel and testing Detail Panel 2`] = `
<section
  className="page-wrapper"
>
  <div
    className="section full-panel full-panel-details"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className="col-panel-details"
        componentClass="div"
        xs={12}
      >
        <DiaryEntryDetail
          currentPanel="diaryEntriesDetail"
          detail={
            Object {
              "author": "bob.smith@gmail.com",
              "dateCreated": 1510224834000,
              "noteType": "Exam Report",
              "notes": "11",
              "source": "ethercis",
              "sourceId": "d6b4d397-779c-4a4e-b5eb-2084fb11876f",
            }
          }
          editedPanel={Object {}}
          expandedPanel="diaryEntriesPanel"
          isSubmit={false}
          name="diaryEntriesDetail"
          onCancel={[Function]}
          onEdit={[Function]}
          onExpand={[Function]}
          onSaveSettings={[Function]}
          openedPanel="diaryEntriesPanel"
        />
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <DiaryEntry /> should renders correctly with diaryEntriesPanel and testing Detail Panel 3`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    />
  </div>
</section>
`;

exports[`Component <DiaryEntry /> should renders correctly with empty store 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="diaryEntriesMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={true}
            name="diaryEntriesMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Diary Entry List"
          />
          <PluginMainPanel
            columnNameSortBy="noteType"
            emptyDataMessage="No Diary Entry List"
            headers={
              Array [
                Object {
                  "key": "noteType",
                  "title": "Type",
                  "width": "23%",
                },
                Object {
                  "key": "author",
                  "title": "Author",
                  "width": "33%",
                },
                Object {
                  "key": "dateCreated",
                  "title": "Date Created",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="diaryEntries"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;

exports[`Component <DiaryEntry /> should renders correctly with forms error 1`] = `
<section
  className="page-wrapper"
>
  <div
    className="section"
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        className=""
        componentClass="div"
        xs={12}
      >
        <div
          className="panel panel-primary"
        >
          <PluginListHeader
            currentPanel="diaryEntriesMain"
            isBtnExpandVisible={false}
            isBtnTableVisible={true}
            name="diaryEntriesMain"
            onExpand={[Function]}
            onFilterChange={[Function]}
            panelTitle="Diary Entry List"
          />
          <PluginMainPanel
            columnNameSortBy="noteType"
            emptyDataMessage="No Diary Entry List"
            headers={
              Array [
                Object {
                  "key": "noteType",
                  "title": "Type",
                  "width": "23%",
                },
                Object {
                  "key": "author",
                  "title": "Author",
                  "width": "33%",
                },
                Object {
                  "key": "dateCreated",
                  "title": "Date Created",
                  "transformer": [Function],
                  "width": "25%",
                },
                Object {
                  "key": "source",
                  "title": "Source",
                  "width": "19%",
                },
                Object {
                  "display": "none",
                  "key": "sourceId",
                  "title": "sourceId",
                  "width": 0,
                },
              ]
            }
            isBtnCreateVisible={true}
            isLoading={true}
            listPerPageAmount={10}
            offset={0}
            onCellClick={[Function]}
            onCreate={[Function]}
            onHeaderCellClick={[Function]}
            setOffset={[Function]}
            sortingOrder="asc"
            table="diaryEntries"
            totalEntriesAmount={0}
          />
        </div>
      </Col>
    </Row>
  </div>
</section>
`;
